tests/baselines/reference/parserErrorRecovery_ObjectLiteral5.errors.txt
==== tests/cases/compiler/parserErrorRecovery_ObjectLiteral5.ts (1 errors) ====
    var v = { a: 1,
    return;
          ~
!!! parserErrorRecovery_ObjectLiteral5.ts(2,7): error TS1005: ':' expected.